# PolyMCP

./: README.md  main.py  mcp_client.py  pyproject.toml
config/: settings.py
llm/: llm_client.py
llm/providers/: gemini.py  ollama.py  openai.py
mcp_servers/airspace_mcp/: server.py
mcp_servers/airspace_mcp/data/: airports.json  cities.json  city_airport_map.json
mcp_servers/airspace_mcp/handlers/: fetch_city_airports.py  fetch_flight_data.py
mcp_servers/airspace_mcp/helpers/: build_redis.py  redis_cache.py
mcp_servers/airspace_mcp/helpers/redis_client/: client.py  redis_setting.py
mcp_servers/weather_mcp/: server.py
mcp_servers/weather_mcp/handlers/: fetch_weather_data.py
tests/: list_mcp_tools.py  test_gemini_provider.py  test_redis_async.py  test_weather_server_start.py
utils/: logging_setup.py
utils/prompts/: prompt_templets.py
utils/tools/: server_manager.py  tool_registry.py
