[project]
name = "mcp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioredis>=2.0.1",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "google-genai>=2.0.1",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
    "mcp[cli]>=1.27.0",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "requests>=2.33.1",
]
